<resources>
    <string name="app_name">3C</string>
    <string name="copyright">© 3C</string>
    <string name="navigation_setting">Settings</string>
    <string name="navigation_notification">Notifications</string>
    <string name="navigation_signout">Signout</string>
    <string name="navigation_help">FAQs</string>
    <string name="navigation_share">Share Us</string>
    <string name="navigation_rate">Rate Us</string>
    <string name="navigation_suggest">Feedback</string>
    <string name="navigation_opensource">Open Source</string>
    <string name="email_demo">abcdefgh@xyz.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="codeforces">Codeforces</string>
    <string name="codechef">Codechef</string>
    <string name="hackerrank">Hackerrank</string>
    <string name="hackerearth">Hackerearth</string>
    <string name="atcoder">AtCoder</string>
    <string name="spoj">Spoj</string>
    <string name="topcoder">TopCoder</string>
    <string name="leetcode">LeetCode</string>
    <string name="google">Google Coding Competitions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="change_layout">Change Layout</string>
    <string name="communicate">Communicate</string>

    <string name="set_notification">Set Notification</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="Start">START</string>
    <string name="End">END</string>
    <string name="notification">Notifications</string>
    <string name="enable_notif">Enable Notifications</string>
    <string name="week_1">1 week</string>
    <string name="week_2">2 weeks</string>
    <string name="month_1">1 month</string>
    <string name="contest_duration">Contest Duration</string>
    <string name="contest_platforms">Contest Platforms</string>
    <string name="time_format">Time Format</string>
    <string name="hr_12_format">12-hour</string>
    <string name="hr_24_format">24-hour</string>
    <string name="faq">Frequently Asked Questions</string>
    <string name="title_activity_maps">Map</string>
    <string name="web_client_id">140840445641-f7nov9p31ma95k53gpclpmnibuchgnir.apps.googleusercontent.com</string>
</resources>
