<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/vector_home"
            android:title="@string/menu_home" />
<!--        <item-->
<!--            android:visible="false"-->
<!--            android:id="@+id/nav_gallery"-->
<!--            android:icon="@drawable/vector_notification"-->
<!--            android:title="@string/menu_gallery" />-->
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/vactor_faq"
            android:title="FAQ's" />
    </group>
    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/vector_share"
                android:title="@string/navigation_share" />
            <item
                android:id="@+id/nav_suggest"
                android:icon="@drawable/ic_baseline_contact_mail_24"
                android:title="@string/navigation_suggest" />
            <item
                android:id="@+id/nav_open_source"
                android:icon="@drawable/ic_baseline_favorite_border_24"
                android:title="@string/navigation_opensource" />
<!--            <item-->
<!--                android:id="@+id/nav_contributor"-->
<!--                android:icon="@drawable/ic_round_code_24"-->
<!--                android:title="@string/navigation_contributors" />-->
        </menu>
    </item>
</menu>